# DRL_Drone_Agent

./: README.md  package.xml  setup.cfg  setup.py
drone_node/: drone_agent.py  package.xml  setup.cfg
drone_node/submodules/: DQN.py  DQNagent.py  DoubleDQN.py  DuelingNet.py  SAC.py  agent.py
drone_package/: drone_agent_DQN.py  drone_agent_DoubleDQN.py  drone_agent_SAC.py
drone_package/submodules/: AgentMemory.py  Control.py  DQN.py  DoubleDQN.py  Environment.py  SAC.py
